--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,79 @@ dark-blue - #134d71;
 white - #ffffff;
 black - #000000;
 */
+* {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 20px;
+  padding: 20px 20px;
+  flex-direction: column;
+  align-items: center;
+}
+
+body {
+  color:#ffffff;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 20px;
+  background-image: linear-gradient(to bottom, #134d71, #78a7c6, #f7e4bf);
+  height: 700px;
+  width: 930px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid red;
+  justify-content: space-evenly;
+}
+.hidden {
+  display: none;
+}
+.projectName {
+  color: #ffffff;
+  width: 400px;
+  height: 100;
+  padding: 5px 10px 50px 10px;
+  border: 1px solid red;
+
+
+}
+.question {
+  font-size: 15px;
+  width: 300px;
+  height: 10px;
+  margin-top: 10px;
+  border: 1px solid red;
+}
+.text-selection-box {
+  background: #ffffff;
+  color: #000000;
+  height: 100px;
+  width: 500px;
+  border-radius: 10px;
+  display: block;
+  text-align: center;
+}
+.affirmation-box {
+  font-size: 10px;
+}
+.mantra-box {
+  font-size: 20px;
+}
+.receive-message-button {
+  background: #134d71;
+  color: #ffffff;
+  border-radius: 5px;
+  font-size: 15px;
+  margin-top: 45px;
+  height:10px;
+
+}
+.logo-text-box{
+  display: flex;
+  background: #ffffff;
+  height: 100px;
+  width: 700px;
+  border-radius: 10px;
+  border: 1px solid red;
+}
+img {
+  height: 75px;
+}
