--- a/styles.css
+++ b/styles.css
@@ -12,73 +12,67 @@ black - #000000;
   padding: 20px 20px;
   flex-direction: column;
   align-items: center;
+  /* border: 1px solid red; */
 }
 
 body {
   color:#ffffff;
-  font-family: 'Quicksand', sans-serif;
-  font-size: 20px;
   background-image: linear-gradient(to bottom, #134d71, #78a7c6, #f7e4bf);
   height: 700px;
-  width: 930px;
+  width: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
   display: flex;
-  flex-direction: column;
-  border: 1px solid red;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 .hidden {
   display: none;
 }
 .projectName {
   color: #ffffff;
-  width: 400px;
+  width: 200;
   height: 100;
-  padding: 5px 10px 50px 10px;
-  border: 1px solid red;
-
-
 }
 .question {
   font-size: 15px;
   width: 300px;
-  height: 10px;
+  height: 5px;
   margin-top: 10px;
-  border: 1px solid red;
 }
 .text-selection-box {
   background: #ffffff;
   color: #000000;
-  height: 100px;
+  height: 75px;
   width: 500px;
   border-radius: 10px;
   display: block;
   text-align: center;
 }
-.affirmation-box {
-  font-size: 10px;
-}
-.mantra-box {
-  font-size: 20px;
+.radio-button {
+  font-size: 5px;
 }
 .receive-message-button {
   background: #134d71;
   color: #ffffff;
   border-radius: 5px;
   font-size: 15px;
-  margin-top: 45px;
   height:10px;
-
+  margin-top: 30px;
+  padding-top: 5px;
 }
 .logo-text-box{
   display: flex;
   background: #ffffff;
   height: 100px;
-  width: 700px;
+  width: 900px;
   border-radius: 10px;
-  border: 1px solid red;
+  color: #000000;
+  align-self: auto;
+
 }
 img {
-  height: 75px;
+  height: 65px;
+}
+h3 {
+
 }
