--- a/styles.css
+++ b/styles.css
@@ -30,8 +30,9 @@ body {
 }
 .projectName {
   color: #ffffff;
-  width: 200;
-  height: 100;
+  width: 400px;
+  height: 100px;
+  margin-left: 70px;
 }
 .question {
   font-size: 15px;
@@ -76,13 +77,11 @@ body {
   border-radius: 5px;
   font-size: 15px;
   height:10px;
-  margin-top: 30px;
   padding-top: 5px;
-  border: 1px solid red;
+  margin-top: 30px;
+  margin-left: 177px;
+  align-self: center;
 }
 img {
   height: 65px;
-}
-h3 {
-
 }
